--- a/style.css
+++ b/style.css
@@ -11,3 +11,11 @@ img
     height: 100px;
     width: 100px;
 }
+
+body {
+  background-image: url(image/casino.jpg);
+}
+
+.main {
+  margin-top: 200px;
+}
