--- a/style.css
+++ b/style.css
@@ -23,9 +23,10 @@ body {
 .carre
 {
     width: 600px;
-    height: 250px;
+    height: 300px;
     background: white;
     opacity: 0.90;
+    padding-top: 10px;
 }
 
 .site
