Organisation et background

--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ img
 }
 
 body {
-  background-image: url(image/casino.jpg);
+    background-image: url(image/casino.jpg);
+    background-size: 100%;
+    
 }
 
 .main {
