--- a/style.css
+++ b/style.css
@@ -24,11 +24,13 @@ body {
 
 .carre
 {
+    background-image: url(image/machine1.png);
+    background-size: 100%;
     width: 600px;
-    height: 300px;
-    background: white;
-    opacity: 0.90;
-    padding-top: 10px;
+    height: 430px;
+
+    opacity: 1;
+    padding-top: 100px;
 }
 
 .site
