--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 img
 {
     height: 100px;
-    width: 100px;
+    width: 130px;
+    margin-top:245px;
 }
 
 body {
@@ -19,7 +20,7 @@ body {
 }
 
 .main {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .carre
@@ -30,10 +31,12 @@ body {
     height: 430px;
 
     opacity: 1;
-    padding-top: 100px;
+  }
+
+.gui {
+    margin-bottom: 100px;
 }
 
-.site
-{
-    color: white;
+.score {
+  margin-top: 100px;
 }
